--- a/app/css/2048.css
+++ b/app/css/2048.css
@@ -1,5 +1,6 @@
 header{
     display: block;
+    position: relative;
     margin: 0 auto;
     width: 500px;
     text-align: center;
@@ -30,10 +31,32 @@ header #start:hover{
     background-color:#9f8b77;
 }
 
-header p{
+header .score-container{
+    display: inline-block;
+    width: 120px;
+    height: 50px;
     font-family:Arial;
     font-size:25px;
     margin:20px auto;
+    color: white;
+    font-weight: bold;
+    background: #bbada0;
+    border-radius:5px;
+}
+#score{
+    margin-top: 18px;
+}
+header .score-container:after{
+    content: "score";
+    position: absolute;
+    width: 100%;
+    top: 152px;
+    left: 0;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 13px;
+    text-align: center;
+    color: #eee4da;
 }
 #grid-container{
     width:460px;
@@ -57,7 +80,7 @@ header p{
 }
 .number-cell{
     border-radius: 6px;
-
+    color: rgb(119, 110, 101);
     font-family: Arial;
     font-weight:bold;
     font-size:60px;
@@ -100,4 +123,56 @@ header p{
     -webkit-animation-fill-mode: both;
     -moz-animation-fill-mode: both;
     animation-fill-mode: both;
+}
+.cell-2{
+    background: #eee4da;
+}
+.cell-4{
+    background: #ede0c8;
+}
+.cell-8{
+    color: #f9f6f2;
+    background: #f2b179;
+}
+.cell-16{
+    color: #f9f6f2;
+    background: #f59563;
+}
+.cell-32{
+    color: #f9f6f2;
+    background: #f67c5f;
+}
+.cell-64{
+    color: #f9f6f2;
+    background: #f65e3b;
+}
+.cell-128{
+    color: #f9f6f2;
+    background: #edcf72;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
+    font-size: 45px;
+}
+.cell-256{
+    color: #f9f6f2;
+    background: #edcc61;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
+    font-size: 45px;
+}
+.cell-512{
+    color: #f9f6f2;
+    background: #edc850;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
+    font-size: 45px;
+}
+.cell-1024{
+    color: #f9f6f2;
+    background: #edc53f;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
+    font-size: 35px;
+}
+.cell-2048{
+    color: #f9f6f2;
+    background: #edc22e;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 35px;
 }
