--- a/app/css/2048.css
+++ b/app/css/2048.css
@@ -1,8 +1,9 @@
 header{
     display: block;
     position: relative;
+    height: 180px;
     margin: 0 auto;
-    width: 500px;
+    width: 100%;
     text-align: center;
 }
 
@@ -16,14 +17,11 @@ header h1{
 header #start{
     display:block;
     margin:10px auto;
-
     width:100px;
     padding:10px 10px;
     background-color:#8f7a66;
-
     font-family:Arial;
     color:white;
-
     border-radius:10px;
     text-decoration:none;
 }
@@ -37,20 +35,20 @@ header .score-container{
     height: 50px;
     font-family:Arial;
     font-size:25px;
-    margin:20px auto;
     color: white;
     font-weight: bold;
     background: #bbada0;
     border-radius:5px;
+    margin-bottom: -10px;
 }
 #score{
     margin-top: 18px;
 }
 header .score-container:after{
     content: "score";
-    position: absolute;
+    position: relative;
     width: 100%;
-    top: 152px;
+    top: -55px;
     left: 0;
     text-transform: uppercase;
     font-size: 13px;
@@ -175,4 +173,26 @@ header .score-container:after{
     background: #edc22e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px;
+}
+
+@media screen and (max-width: 640px){
+    .number-cell{
+        font-size: 35px;
+    }
+    .cell-128{
+        font-size: 25px;
+    }
+    .cell-256{
+        font-size: 25px;
+    }
+    .cell-512{
+        font-size: 25px;
+    }
+    .cell-1024{
+        font-size: 15px;
+    }
+    .cell-2048{
+        font-size: 15px;
+    }
+
 }
