--- a/app/css/2048.css
+++ b/app/css/2048.css
@@ -1,7 +1,6 @@
 header{
     display: block;
     position: relative;
-    height: 180px;
     margin: 0 auto;
     width: 100%;
     text-align: center;
@@ -13,10 +12,11 @@ header h1{
     font-weight:bold;
     margin: 10px;
 }
-
+header .head-wrap{
+    margin: 0 auto;
+}
 header #start{
-    display:block;
-    margin:10px auto;
+    display:inline-block;
     width:100px;
     padding:10px 10px;
     background-color:#8f7a66;
@@ -31,27 +31,33 @@ header #start:hover{
 
 header .score-container{
     display: inline-block;
-    width: 120px;
+    position: relative;
+    vertical-align: middle;
+    width: 100px;
     height: 50px;
     font-family:Arial;
-    font-size:25px;
     color: white;
     font-weight: bold;
+    padding-top: 10px;
     background: #bbada0;
     border-radius:5px;
-    margin-bottom: -10px;
+    margin:10px auto;
+    margin-left: 30px;
+    text-align: center;
 }
 #score{
-    margin-top: 18px;
+    margin: 0 auto;
+    font-size: 25px;
+    margin-top: 10px;
 }
 header .score-container:after{
     content: "score";
     position: relative;
     width: 100%;
-    top: -55px;
+    top: -45px;
     left: 0;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 16px;
     line-height: 13px;
     text-align: center;
     color: #eee4da;
