fix header margin

--- a/app/css/2048.css
+++ b/app/css/2048.css
@@ -41,7 +41,7 @@ header .score-container{
     padding-top: 10px;
     background: #bbada0;
     border-radius:5px;
-    margin:10px auto;
+    margin:0 auto;
     margin-left: 30px;
     text-align: center;
 }
